# math

./: .build_conf  .travis.yml  CMakeLists.txt  include_files.cmake
include/ext/algorithm/: knapsack.hpp
include/ext/math/: primes.hpp
tests/: CMakeLists.txt  math.cpp
